# feedback_system

./: DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  Procfile  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
api/: index.py
main/: app.py
main/admin/: TEAM_STRUCTURE.md  __init__.py  requirements.txt  summarizer.py
main/admin/instance/: course_feedback.db  feedback_local.db
main/admin/migrations/versions/: f7b3c9a1d2e4_add_session_token_to_student.py
main/admin/scripts/: add_session_token_column.py  clear_sessions.py  list_db_tables.py
main/admin/src/: __init__.py  main.py
main/admin/src/admin/: routes.py
main/admin/src/common/: config.py  models.py
main/admin/src/common/utils/: feedback_ai.py  pdf_generator.py  sentiment.py  sentiment_pdf.py
main/admin/src/incharge/: routes.py
main/admin/src/results/: routes.py
main/admin/src/student/: __init__.py  routes.py
main/admin/static/css/: main.css
main/admin/static/js/: admin.js
main/admin/templates/: base.html  general_feedback.html  manage_events.html  results.html
main/admin/templates/domains/admin/: base.html  dashboard.html  login.html  manage_courses.html  manage_students.html  past_responses.html
main/admin/templates/domains/incharge/: dashboard.html  login.html
main/admin/templates/domains/student/: dashboard.html  feedback_form.html  general_feedback_dashboard.html
main/incharge/src/: __init__.py
main/student/src/: routes.py
main/student/static/css/: student.css
main/student/templates/: login.html  submit_feedback.html  thank_you.html
